# fusevm

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: aot_native.rs  classic.rs  jit_crossover.rs  jit_disk_cache.rs  jit_trace.rs  jit_vs_interp.rs  vm_bench.rs
docs/: hud-theme.js  index.html  report.html
examples/: emit_aot.rs  wasm_worker_host.rs
src/: aot.rs  awk_builtins.rs  awk_host.rs  chunk.rs  ffi.rs  host.rs  jit.rs  lib.rs  op.rs  rust_sugar.rs  sched.rs  shell_builtins.rs  sysclock.rs  value.rs  vm.rs
tests/: array_hash_ops.rs  awk_host_edge_cases.rs  awk_host_intdiv_and_strftime.rs  awk_host_prng_and_bitwise_float.rs  awk_host_strtonum_and_int.rs  builtin_table.rs  chunk_builder.rs  chunkbuilder_and_value_introspection.rs  collections.rs  collections_and_concat.rs  compare_bitwise_ops.rs  comparison_logical_bitwise.rs  contract_deopt_constants_and_subchunks.rs  contract_fused_ops_and_jit.rs  contract_vm_stack_chunk_round4.rs  control_flow.rs  edge_cases.rs  functions_vars_stack.rs  fused_frame_higherorder.rs  fused_ops.rs  host_ext_and_more_ops.rs  host_routing_and_reset.rs  host_trait.rs  jit_api_pool_deopt.rs  jit_block.rs  jit_disk_cache.rs  jit_env_threshold.rs  jit_extension.rs  jit_extension_host.rs  jit_fuzz.rs  jit_linear.rs  jit_public_api.rs  jit_trace.rs  jump_arith_edges.rs  jumps_ext_builtins_files.rs  more_ops.rs  numeric_hook_and_block_float.rs  op_exhaustive_and_vm_lifecycle.rs  serde_and_chunk.rs  shell_builtins_lookup.rs  (+17 more)
